Closed
Bug 347495
Opened 19 years ago
Closed 19 years ago
"ASSERTION: Cannot stretch - All parts missing" with <munderover>
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: rbs)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
232 bytes,
application/xhtml+xml
|
Details | |
|
1.48 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
This testcase, with a missing argument to <munderover>, triggers:
###!!! ASSERTION: Cannot stretch - All parts missing: 'Error', file /Users/admin/trunk/mozilla/layout/mathml/base/src/nsMathMLChar.cpp, line 2311
| Reporter | ||
Comment 1•19 years ago
|
||
When there is a markup error (e.g., fraction without numerator, etc), things are left unset, and the frame cannot be trusted anymore, so we must |return| immediately after appending nsDisplayMathMLError, and not try to paint children.
Attachment #232477 -
Flags: superreview?(roc)
Attachment #232477 -
Flags: review?(roc)
*** Bug 347434 has been marked as a duplicate of this bug. ***
Attachment #232477 -
Flags: superreview?(roc)
Attachment #232477 -
Flags: superreview+
Attachment #232477 -
Flags: review?(roc)
Attachment #232477 -
Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•