Fix assertion - bug 347495 - was due to an attempt to paint children in case of invalid markup, r+sr=roc